[gd_scene load_steps=5 format=3 uid="uid://vdlef4d1dnij"]

[ext_resource type="Script" path="res://scenes/entities/weapons/grappling_hook/grappling_hook.gd" id="1_70rfx"]
[ext_resource type="PackedScene" uid="uid://xltnp3wd2u01" path="res://scenes/entities/targeting_system/targeting_system.tscn" id="1_fnbbk"]
[ext_resource type="Script" path="res://shared_scripts/weapons/projectile_launcher.gd" id="4_fj7v7"]
[ext_resource type="PackedScene" uid="uid://cfr6bbwd7xgrt" path="res://scenes/entities/projectiles/hook_projectile/hook_projectile.tscn" id="5_hbune"]

[node name="GrapplingHook" type="Node2D"]
script = ExtResource("1_70rfx")
grappling_speed = 500.0
projectile_retraction_speed = 800.0

[node name="TargetingSystem" parent="." instance=ExtResource("1_fnbbk")]

[node name="ProjectileLauncher" type="Node2D" parent="."]
script = ExtResource("4_fj7v7")
projectile_scene = ExtResource("5_hbune")
projectile_lifespan = 1.0
launch_speed = 400.0
launch_interval = 0.1

[node name="ProjectileSpawnPoint" type="Marker2D" parent="."]

[connection signal="target_detected" from="TargetingSystem" to="." method="_on_targeting_system_target_detected"]
[connection signal="target_lost" from="TargetingSystem" to="." method="_on_targeting_system_target_lost"]
